content/riak/kv/2.0.0/developing/getting-started.md
---
title: "Getting Started Overview"
description: ""
project: "riak_kv"
project_version: "2.0.0"
lastmod: 2014-08-14T00:00:00-00:00
sitemap:
  priority: 0.1
menu:
  riak_kv-2.0.0:
    name: "Getting Started"
    identifier: "developing_getting_started"
    weight: 100
    parent: "developing"
toc: true
---

[install index]: {{<baseurl>}}riak/kv/2.0.0/setup/installing
[dev client libraries]: {{<baseurl>}}riak/kv/2.0.0/developing/client-libraries

Welcome, new Riak developer! This guide will get you started developing
against Riak KV with minimal fuss.

## Installing Riak KV

The easiest way to get started with Riak KV is to complete the
[installation][install index] process.

## Choose Your Programming Language

Basho officially supports a number of open-source [client libraries][dev client libraries]
for various programming languages and environments. Please select the
language with which you'd like to proceed:

<ul class="clearfix   client-library-logos">
  <li class="float-left"><a class="block   client-library-logo" href="java/"><img src="{{<baseurl>}}images/client_library_logos/java.png" alt="Java" /></a></li>
  <li class="float-left"><a class="block   client-library-logo" href="ruby/"><img src="{{<baseurl>}}images/client_library_logos/ruby_small.png" alt="Ruby" /></a></li>
  <li class="float-left"><a class="block   client-library-logo" href="python/"><img src="{{<baseurl>}}images/client_library_logos/python.png" alt="Python" /></a></li>
  <li class="float-left"><a class="block   client-library-logo" href="csharp/"><img src="{{<baseurl>}}images/client_library_logos/c_sharp.png" alt="CSharp" /></a></li>
  <li class="float-left"><a class="block   client-library-logo" href="nodejs/"><img src="{{<baseurl>}}images/client_library_logos/nodejs.png" alt="Node.js" /></a></li>
  <li class="float-left"><a class="block   client-library-logo" href="erlang/"><img src="{{<baseurl>}}images/client_library_logos/erlang.png" alt="Erlang" /></a></li>
  <li class="float-left"><a class="block   client-library-logo" href="php/"><img src="{{<baseurl>}}images/client_library_logos/php.png" alt="PHP" /></a></li>
  <li class="float-left"><a class="block   client-library-logo" href="golang/"><img src="{{<baseurl>}}images/client_library_logos/golang.png" alt="GoLang" /></a></li>
</ul>

### Community-supported Client Libraries

Please see our [client libraries][dev client libraries] page for a listing of
community-supported clients.
