content/riak/kv/2.0.8/developing/getting-started.md
---
title: "Getting Started Overview"
description: ""
project: "riak_kv"
project_version: "2.0.8"
lastmod: 2017-02-16T00:00:00-00:00
sitemap:
  priority: 0.1
menu:
  riak_kv-2.0.8:
    name: "Getting Started"
    identifier: "developing_getting_started"
    weight: 100
    parent: "developing"
toc: true
---

[install index]: {{<baseurl>}}riak/kv/2.0.8/setup/installing
[dev client libraries]: {{<baseurl>}}riak/kv/2.0.8/developing/client-libraries

Welcome, new Riak developer! This guide will get you started developing
against Riak KV with minimal fuss.

## Installing Riak KV

The easiest way to get started with Riak KV is to complete the
[installation][install index] process.

## Choose Your Programming Language

Basho officially supports a number of open-source [client libraries][dev client libraries]
for various programming languages and environments. Please select the
language with which you'd like to proceed:

<ul class="planguages">
<li><a href="java/"><img src="{{<baseurl>}}images/plangs/java.jpg" alt="Java" /></a></li>
<li><a href="ruby/"><img src="{{<baseurl>}}images/plangs/ruby.jpg" alt="Ruby" /></a></li>
<li><a href="python/"><img src="{{<baseurl>}}images/plangs/python.png" alt="Python" /></a></li>
<li><a href="csharp/"><img src="{{<baseurl>}}images/plangs/csharp.png" alt="CSharp" /></a></li>
<li><a href="nodejs/"><img src="{{<baseurl>}}images/plangs/nodejs.png" alt="Node.js" /></a></li>
<li><a href="erlang/"><img src="{{<baseurl>}}images/plangs/erlang.jpg" alt="Erlang" /></a></li>
<li><a href="php/"><img src="{{<baseurl>}}images/plangs/php.png" alt="PHP" /></a></li>
<li><a href="golang/"><img src="{{<baseurl>}}images/plangs/golang.png" alt="Go" /></a></li>
</ul>

### Community-supported Client Libraries

Please see our [client libraries][dev client libraries] page for a listing of
community-supported clients.
